--- a/notebook/CNN.ipynb
+++ b/notebook/CNN.ipynb
@@ -9,9 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -55,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -832,16 +839,10 @@
     }
    ],
    "source": [
-    "model.save(os.path.join(\"..\", \"IPD\", \"CNN_model.h5\"))\n",
+    "weights = new_model.get_weights()\n",
+    "pickle.dump(weights, open(os.path.join(\"..\", \"IPD\", \"CNN_model.pkl\"),\"wb\"))\n",
     "print(\"Model Saved\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
