--- a/notebook/PreProcessing.ipynb
+++ b/notebook/PreProcessing.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,38 +93,36 @@
     "# x values are relative to the nose_y\n",
     "\n",
     "def normalize_sample(X):    \n",
-    "    x_num = X[:,0]\n",
-    "    y_num = X[:,1]\n",
+    "    x_num = X[:,0].copy()\n",
+    "    y_num = X[:,1].copy()\n",
     "    \n",
     "    for col in range(0, len(feature_list), 2):\n",
-    "        X[:,col] = (X[:,col] - x_num)\n",
+    "        X[:,col] = X[:,col] - x_num\n",
     "    \n",
     "    for col in range(1, len(feature_list), 2):\n",
-    "        X[:,col] = (X[:,col] - y_num)\n",
+    "        X[:,col] = X[:,col] - y_num\n",
     "    \n",
     "    return X[:,2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# universal normalization in terms of shoulder coordinates\n",
     "def normalize_sample(X):\n",
-    "    x_denom = abs(X[:,2] - X[:,4])\n",
-    "    y_denom = abs(X[:,3] - X[:,5])\n",
-    "    x_num = X[:,0]\n",
-    "    y_num = X[:,1]\n",
+    "    x_denom = abs(X[:,2] - X[:,4]).copy()\n",
+    "    y_denom = abs(X[:,3] - X[:,5]).copy()\n",
+    "    x_num = X[:,0].copy()\n",
+    "    y_num = X[:,1].copy()\n",
     "    \n",
     "    for col in range(6, len(feature_list), 2):\n",
-    "        X[:,col] = X[:,col] - x_num\n",
-    "        X[:,col] = X[:,col]/x_denom\n",
+    "        X[:,col] = (X[:,col] - x_num)/x_denom\n",
     "    \n",
     "    for col in range(7, len(feature_list), 2):\n",
-    "        X[:,col] = X[:,col] - y_num\n",
-    "        X[:,col] = X[:,col]/y_denom\n",
+    "        X[:,col] = (X[:,col] - y_num)/y_denom\n",
     "    \n",
     "    return X[:,6:]"
    ]
@@ -138,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
