--- a/notebook/PreProcessing.ipynb
+++ b/notebook/PreProcessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,34 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x values are relative to the nose\n",
-    "# left body y values are relative to the leftShoulder_y value\n",
-    "# right body y values are relative to the rightShoulder_y value\n",
-    "\n",
-    "def normalize_sample(X):\n",
-    "    x_num = X[:,0]\n",
-    "    left_y = X[:,3]\n",
-    "    right_y = X[:,5]\n",
-    "    \n",
-    "    for col in range(0, len(feature_list), 2):\n",
-    "        X[:,col] = (X[:,col] - x_num)\n",
-    "    \n",
-    "    for col in range(3, len(feature_list), 4):\n",
-    "        X[:,col] = (X[:,col] - left_y)\n",
-    "    \n",
-    "    for col in range(5, len(feature_list), 4):\n",
-    "        X[:,col] = (X[:,col] - right_y)\n",
-    "    \n",
-    "    return X[:, [1,2,4,6,7,8,9,10,11,12,13]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,28 +79,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# universal normalization in terms of shoulder coordinates\n",
-    "def normalize_sample(X):\n",
-    "    x_denom = abs(X[:,2] - X[:,4]).copy()\n",
-    "    y_denom = abs(X[:,3] - X[:,5]).copy()\n",
-    "    x_num = X[:,0].copy()\n",
-    "    y_num = X[:,1].copy()\n",
-    "    \n",
-    "    for col in range(6, len(feature_list), 2):\n",
-    "        X[:,col] = (X[:,col] - x_num)/x_denom\n",
-    "    \n",
-    "    for col in range(7, len(feature_list), 2):\n",
-    "        X[:,col] = (X[:,col] - y_num)/y_denom\n",
-    "    \n",
-    "    return X[:,6:]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,19 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All videos now of length: 250\n",
-      "X shape : (415, 250, 12) \n",
-      "Y Shape : (415,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def extend_data(X, kind=\"zeros\"):\n",
     "    def zeros(sample, diff, num_features):\n",
@@ -207,9 +148,26 @@
     "        append_array = switcher[kind] \n",
     "        X[i] = np.append(X[i], append_array, axis=0)\n",
     "        \n",
-    "    return X\n",
-    "\n",
-    "X = extend_data(X, kind=\"zeros\")\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All videos now of length: 250\n",
+      "X shape : (415, 250, 12) \n",
+      "Y Shape : (415,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = extend_data(X, kind=\"means\")\n",
     "X = np.array(X)\n",
     "Y = np.array(Y)\n",
     "num_samples, num_timeframes, num_features = X.shape\n",
@@ -227,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -305,12 +263,14 @@
     "X_train = X_train.reshape((X_train.shape[0],-1))\n",
     "X_test = X_test.reshape((X_test.shape[0],-1))\n",
     "\n",
-    "scaler = scaling(X_train, kind=\"minmax\", feature_range=(-1,1))\n",
+    "temp_X = X.reshape((X.shape[0],-1))\n",
+    "scaler = scaling(temp_X, kind=\"standard\", feature_range=(-1,1))\n",
     "X_train = scaler.transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
     "X_train = X_train.reshape((-1,num_timeframes,num_features))\n",
     "X_test = X_test.reshape((-1,num_timeframes,num_features))\n",
+    "\n",
     "print(\"Training samples : {} \\nTesting Samples : {}\".format(X_train.shape, X_test.shape))\n",
     "print(\"Training Labels : {} \\nTesting Labels : {}\".format(Y_train.shape, Y_test.shape))"
    ]
@@ -324,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,6 +309,13 @@
     "np.save(os.path.join(\"..\", \"IPD\", \"y_train.npy\"), Y_train)\n",
     "np.save(os.path.join(\"..\", \"IPD\", \"y_test.npy\"), Y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
