--- a/notebook/ServerCode.ipynb
+++ b/notebook/ServerCode.ipynb
@@ -78,8 +78,8 @@
    "outputs": [],
    "source": [
     "def normalize_sample(X):    \n",
-    "    x_num = X[:,0]\n",
-    "    y_num = X[:,1]\n",
+    "    x_num = X[:,0].copy()\n",
+    "    y_num = X[:,1].copy()\n",
     "    \n",
     "    total_cols = X.shape[-1]\n",
     "    for col in range(0, total_cols, 2):\n",
@@ -140,7 +140,7 @@
     "    #Equalize the timeframes\n",
     "    diff = max_timeframes - data.shape[0]\n",
     "    if(diff>0):\n",
-    "        data = extend_data(data, diff, kind='zeros')\n",
+    "        data = extend_data(data, diff, kind='means')\n",
     "    else:\n",
     "        data = data[:max_timeframes,:]\n",
     "    \n",
